Essai tir projectile ennemi (ne fonctionne pas)

--- a/Code/makefile
+++ b/Code/makefile
@@ -1,5 +1,5 @@
-sfml-app : main.o definitions.o generation.o perso.o projectile.o background.o
-	g++ main.o definitions.o generation.o perso.o projectile.o background.o -o sfml-app -lsfml-graphics -lsfml-window -lsfml-system
+sfml-app : main.o definitions.o generation.o perso.o projectile.o background.o projectile_ennemi.o
+	g++ main.o definitions.o generation.o perso.o projectile.o background.o projectile_ennemi.o -o sfml-app -lsfml-graphics -lsfml-window -lsfml-system
 
 main.o : main.cpp
 	g++ -Wall -c main.cpp
@@ -18,6 +18,8 @@ projectile.o : projectile.cpp projectile.hpp
 
 background.o : background.cpp background.hpp
 	g++ -Wall -c background.cpp
+projectile_ennemi : projectile_ennemi.cpp projectile_ennemi.hpp
+	g++ -Wall -c projectile_ennemi.cpp
 
 clean : 
 	rm *.o sfml-app
