mise à jour du clean pour qu'il fonctionne avec le nouveau nom de l'exécutable

--- a/Code/makefile
+++ b/Code/makefile
@@ -22,4 +22,4 @@ background.o : background.cpp background.hpp
 projectile_ennemi.o: projectile_ennemi.cpp projectile_ennemi.hpp
 	g++ -Wall -c projectile_ennemi.cpp
 clean : 
-	rm *.o sfml-app
+	rm *.o bodyguard
